# crewai-learning

./: .gitignore  README.md  hello.py  part_0.ipynb  pyproject.toml  streaming.py  utils.py
content_farm/: .gitignore  README.md  content.md  pyproject.toml  report.md
content_farm/src/content_farm/: crew.py  llm.py  main.py
content_farm/src/content_farm/config/: agents.yaml  tasks.yaml
content_farm/src/content_farm/crews/: content.py  report.py
