[project]
name = "content_farm"
version = "0.1.0"
description = "content-farm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.12"
dependencies = ["crewai[tools]>=0.86.0,<1.0.0"]

[project.scripts]
content_farm = "content_farm.main:run"
run_crew = "content_farm.main:run"
dev = "content_farm.main:run"
train = "content_farm.main:train"
replay = "content_farm.main:replay"
test = "content_farm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
